# ChangeLog for dev-perl/Apache-SizeLimit
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-SizeLimit/ChangeLog,v 1.14 2012/09/11 15:11:09 armin76 Exp $

  11 Sep 2012; Raúl Porcel <armin76@gentoo.org>
  Apache-SizeLimit-0.960.0.ebuild:
  alpha/ia64/sparc stable wrt #432610

  27 Aug 2012; Johannes Huber <johu@gentoo.org>
  Apache-SizeLimit-0.960.0.ebuild:
  Stable for x86, wrt bug #432610

  25 Aug 2012; Agostino Sarubbo <ago@gentoo.org>
  Apache-SizeLimit-0.960.0.ebuild:
  Stable for amd64, wrt bug #432610

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  18 Feb 2012; Torsten Veller <tove@gentoo.org>
  -Apache-SizeLimit-0.950.0.ebuild:
  Cleanup

  04 Jan 2012; Christian Ruppert <idl0r@gentoo.org>
  Apache-SizeLimit-0.960.0.ebuild:
  Fix variable assignment

*Apache-SizeLimit-0.960.0 (04 Jan 2012)

  04 Jan 2012; Christian Ruppert <idl0r@gentoo.org>
  +Apache-SizeLimit-0.960.0.ebuild:
  Version bump.

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Apache-SizeLimit-0.95.ebuild:
  Cleanup

*Apache-SizeLimit-0.950.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org>
  +Apache-SizeLimit-0.950.0.ebuild:
  Change version scheme

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  Apache-SizeLimit-0.95.ebuild:
  Marked ~ppc/~ppc64 wrt #359047

  22 Jul 2011; Jeroen Roovers <jer@gentoo.org> Apache-SizeLimit-0.95.ebuild:
  Marked ~hppa (bug #359047).

  15 May 2011; Raúl Porcel <armin76@gentoo.org> Apache-SizeLimit-0.95.ebuild:
  Add ~alpha/~ia64/~sparc wrt #359047

  25 Mar 2011; Christian Ruppert <idl0r@gentoo.org>
  Apache-SizeLimit-0.95.ebuild,
  +files/Apache-SizeLimit-0.95-Fix_Linux-Smaps_detection.patch:
  Remove Linux-Smaps dependency since it's totally optional, also fix
  Linux-Smaps detection to not die if Linux-Smaps has been installed but
  /proc/self/smaps doesn't exist.

*Apache-SizeLimit-0.95 (15 Mar 2011)
