@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Pid/Linux-Pid-0.40.0.ebuild,v 1.4 2012/09/11 15:04:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Pid/Linux-Pid-0.40.0.ebuild,v 1.5 2012/09/18 14:38:56 jer Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Interface to Linux getpp?id functions"
 
 SLOT="0"
-KEYWORDS="alpha amd64 ~hppa ia64 ~ppc ~ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ~ppc ~ppc64 sparc x86"
 IUSE=""
 
 SRC_TEST="do"
