@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Linux-Pid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Pid/ChangeLog,v 1.10 2012/09/11 15:04:17 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Pid/ChangeLog,v 1.11 2012/09/18 14:38:56 jer Exp $
+
+  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> Linux-Pid-0.40.0.ebuild:
+  Stable for HPPA (bug #432610).
 
   11 Sep 2012; Raúl Porcel <armin76@gentoo.org> Linux-Pid-0.40.0.ebuild:
   alpha/ia64/sparc stable wrt #432610
