@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Apache-SizeLimit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-SizeLimit/ChangeLog,v 1.14 2012/09/11 15:11:09 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-SizeLimit/ChangeLog,v 1.15 2012/09/18 14:39:26 jer Exp $
+
+  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> Apache-SizeLimit-0.960.0.ebuild:
+  Stable for HPPA (bug #432610).
 
   11 Sep 2012; Raúl Porcel <armin76@gentoo.org>
   Apache-SizeLimit-0.960.0.ebuild:
